# z-cmdb

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  README_zh.md  dev-start.bat  dev-stop.bat  pyproject.toml  scan_quick_20260520_1730.xml
backend/: requirements.txt
backend/alembic/: env.py
backend/app/: cli.py  main.py
backend/tests/: conftest.py  test_assets.py  test_auth.py  test_export_threat_hunting.py  test_scan.py
backend/tools/: encrypt_existing_db.py
deploy/: DEPLOY.md  DEPLOY_EN.md  preflight_sqlcipher.py
deploy/docker/: Dockerfile  Dockerfile.base  docker-compose.yml  release.sh
deploy/linux/: start.sh  z-cmdb.service
deploy/windows/: build_bundle.bat  python312._pth  start.bat
design/: .thumbnail  Asset Detail Cost Panel.html  Cost Overview.html  Cost Rate Settings.html  Department Billing.html  Design System.html  System Config.html  shell.css  tokens.css
design/uploads/: design-tokens-prefix.txt
docker/: .dockerignore  DOCKER_ISSUES.md  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: CMDB-Lite-PRD-v2.5-建议.md  CMDB-Lite-PRD-v2.md  CMDB-Lite-PRD-v3-建议.md  CMDB-Lite-Playbook-v1.md  CMDB-Lite-差异分析-v1.md  UI-Redesign-2026-Notes.md  Z-CMDB-SQLite加密-验收自检报告.md  api-spec.md  deployment.md  nmap-cmd-reference.md
frontend/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
scripts/: clear_assets.py  export_audit.py  init_db.py  reset_admin.py  screenshot-i18n.js  seed_demo_data.py
secrets/: jwt_secret.txt.example
(+263 files in other folders)
